plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group 'it.units.sdm'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.8.1'
    jetbrainsAnnotationVersion = '22.0.0'
}

sourceCompatibility = '16'
targetCompatibility = '16'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'it.units.sdm.gomoku'
//    mainClass = 'it.units.sdm.gomoku.ui.gui.GUIMain'
    mainClass = 'it.units.sdm.gomoku.Main'
}

javafx {
    version = '16'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation "org.jetbrains:annotations:${jetbrainsAnnotationVersion}"
    implementation("org.json:json:20210307")
    testImplementation(platform("org.junit:junit-bom:${junitVersion}"))
    testImplementation("org.junit.jupiter:junit-jupiter:${junitVersion}")
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

gradle.projectsEvaluated {
    tasks.withType(JavaCompile) {
        options.compilerArgs << "-Xlint:unchecked"  // compile with -Xlint:unchecked for details.
    }
}

run {
    standardInput = System.in   // set standard input
}
//
//run {
//    standardInput = System.in   // set standard input
//    args 'cli-passedFromGradle'
//}
//
////allprojects {
////    //THIS IS WHAT YOU ARE ADDING
////    project.ext {
////        mustUseCLI = 'cli-passedFromGradle';
////    }
////}